Fixed the issue of the trashcan being unclickable if the Modifier Bucket Editor is visible.

--- a/styles/simple.css
+++ b/styles/simple.css
@@ -399,6 +399,7 @@
   border-style: solid;
   border-color: black transparent transparent transparent;
   z-index: -100;
+  pointer-events: none;
 }
 
 .pdflink {
